Adjusted image layout to make sure everything is visible on screen in mobile layout and larger in desktop layout, changed hover size to 1.5 for gifs only

--- a/style.css
+++ b/style.css
@@ -14,14 +14,13 @@ body {
 }
 
 img, #screenshot{
-    max-width: 50vw;
-    width: 1fr;
+    max-width: 100%;
 }
 
 
 
-#screenshot:hover {
-    transform: scale(1.2);
+#gif:hover {
+    transform: scale(1.5);
 }
 
 h1 {
